--- a/modules/home-manager/gui/bars/polybar/config
+++ b/modules/home-manager/gui/bars/polybar/config
@@ -54,10 +54,10 @@ tray-background = ${colors.background}
 inherit = bar/base
 ; modules position
 modules-left   = bspwm xkeyboard
-modules-center = mpd
-modules-right  =
+modules-center = 
+modules-right  = 
 ; tray position
-tray-position   = left
+tray-position   = right
 tray-padding    = 2
 tray-background = ${colors.background}
 
@@ -66,7 +66,8 @@ inherit = bar/base
 ; modules position
 modules-left   = bspwm
 modules-center =
-modules-right  = remainder recording wlan eth pulseaudio brightness battery timer date time
+modules-right  = wlan eth pulseaudio brightness battery date time
+#modules-right  = remainder recording wlan eth pulseaudio brightness battery timer date time
 
 
 ; three moonitors
